[gd_scene load_steps=14 format=3 uid="uid://dhab1irgnvvft"]

[ext_resource type="Script" uid="uid://buc27erj52j5k" path="res://scripts/general/game_manager.gd" id="1_nkcjd"]
[ext_resource type="PackedScene" uid="uid://dllubc3uojpgl" path="res://scripts/general/game_ui.tscn" id="2_81fjq"]
[ext_resource type="PackedScene" uid="uid://cxsbsr3oairol" path="res://scenes/player/player.tscn" id="3_xocjq"]
[ext_resource type="Script" uid="uid://d0ay4xctiq7r4" path="res://scripts/features/dialogue/dialogue_datasource.gd" id="4_emjn4"]
[ext_resource type="Script" uid="uid://ythgvo33im17" path="res://scripts/features/registries/registry.gd" id="5_yau8s"]
[ext_resource type="Script" uid="uid://180d1g2s8ivf" path="res://scripts/features/entities/entity_datasource.gd" id="7_acaax"]
[ext_resource type="Script" uid="uid://bpd703rcoqlgl" path="res://scripts/features/items/item_datasource.gd" id="8_06eyg"]
[ext_resource type="Script" uid="uid://dxeb4bs6rt3vk" path="res://scripts/features/dialogue/dialogue_event_manager.gd" id="9_b45ty"]
[ext_resource type="Script" uid="uid://b3i1wec0r657w" path="res://scripts/player/player_manager.gd" id="10_qkfow"]
[ext_resource type="Script" uid="uid://d3xmcpoix2a3r" path="res://scripts/features/command_handling/command_handler.gd" id="11_rqa6d"]
[ext_resource type="Script" uid="uid://byvwr77grdhiw" path="res://scripts/features/rooms/room_datasource.gd" id="13_i140w"]
[ext_resource type="Script" uid="uid://bha5d8muk4rrp" path="res://scripts/features/dialogue/dialogue_manager.gd" id="13_l06f0"]
[ext_resource type="Script" uid="uid://e6ehjkswru0j" path="res://scripts/features/rooms/room_handler.gd" id="14_l06f0"]

[node name="GameManager" type="Node2D" node_paths=PackedStringArray("_dialogue_datasource", "_registry", "_dialogue_manager", "_entity_datasource", "_item_datasource", "_dialogue_event_manager", "_player_manager", "_command_handler", "_room_datasource", "_room_handler")]
script = ExtResource("1_nkcjd")
_game_ui_scene = ExtResource("2_81fjq")
_dialogue_datasource = NodePath("DialogueDatasource")
_registry = NodePath("Registry")
_dialogue_manager = NodePath("DialogueManager")
_entity_datasource = NodePath("EntityDatasource")
_item_datasource = NodePath("ItemDatasource")
_dialogue_event_manager = NodePath("DialogueEventManager")
_player_manager = NodePath("PlayerManager")
_command_handler = NodePath("CommandHandler")
_room_datasource = NodePath("RoomDatasource")
_room_handler = NodePath("RoomHandler")

[node name="DialogueDatasource" type="Node" parent="."]
script = ExtResource("4_emjn4")
metadata/_custom_type_script = "uid://d0ay4xctiq7r4"

[node name="Registry" type="Node" parent="."]
script = ExtResource("5_yau8s")
metadata/_custom_type_script = "uid://ythgvo33im17"

[node name="EntityDatasource" type="Node" parent="."]
script = ExtResource("7_acaax")
metadata/_custom_type_script = "uid://180d1g2s8ivf"

[node name="ItemDatasource" type="Node" parent="."]
script = ExtResource("8_06eyg")
metadata/_custom_type_script = "uid://bpd703rcoqlgl"

[node name="DialogueEventManager" type="Node" parent="."]
script = ExtResource("9_b45ty")
metadata/_custom_type_script = "uid://dxeb4bs6rt3vk"

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("10_qkfow")
_player_scene = ExtResource("3_xocjq")
metadata/_custom_type_script = "uid://b3i1wec0r657w"

[node name="CommandHandler" type="Node" parent="."]
script = ExtResource("11_rqa6d")
metadata/_custom_type_script = "uid://d3xmcpoix2a3r"

[node name="RoomDatasource" type="Node" parent="."]
script = ExtResource("13_i140w")
metadata/_custom_type_script = "uid://byvwr77grdhiw"

[node name="RoomHandler" type="Node" parent="."]
script = ExtResource("14_l06f0")

[node name="DialogueManager" type="Node" parent="."]
script = ExtResource("13_l06f0")
